--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -17,5 +17,8 @@ pico_set_program_version(NandFlashTest "0.1")
 pico_enable_stdio_uart(NandFlashTest 1)
 pico_enable_stdio_usb(NandFlashTest 0)
 
+target_include_directories(NandFlashTest PRIVATE
+  ${CMAKE_CURRENT_LIST_DIR}
+  )
 
 pico_add_extra_outputs(NandFlashTest)
